infra/terraform/aws/eks/igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name        = "${var.cluster_name}-igw"
    Environment = var.environment
  }
}
