infra/terraform/aws/eks/vpc.tf
resource "aws_vpc" "this" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name                                            = "${var.cluster_name}-vpc"
    Environment                                     = var.environment
    "kubernetes.io/cluster/${var.cluster_name}"     = "shared"
  }
}
